# SyncFloraPot

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
lib/qrcode/: qrcode.c  qrcode.h  qrcode_generator.c
src/: CMakeLists.txt  config.h  main.c
src/dianui/: dianui.h
src/dianui/animation/: dianui_animation.c  dianui_animation.h  dianui_easing.c  dianui_easing.h
src/dianui/assets/: dianui_font.h
src/dianui/core/: dianui_config.h  dianui_engine.c  dianui_engine.h  dianui_engine_private.h  dianui_hal.h  dianui_log.c  dianui_log.h  dianui_renderer.c  dianui_renderer.h  dianui_types.h
src/dianui/elements/: dianui_element.c  dianui_element.h  dianui_icon.c  dianui_icon.h  dianui_qrcode.c  dianui_qrcode.h  dianui_shape.c  dianui_shape.h  dianui_text.c  dianui_text.h
src/dianui/pages/: dianui_pages.c  dianui_pages.h
src/drivers/adc_manager/: adc_manager.c  adc_manager.h
src/drivers/display/: display.c  display.h  easing.c  font.h  icons.h  ui_engine.c  ui_engine.h
src/drivers/i2c_manager/: i2c_manager.c  i2c_manager.h
src/drivers/ldr/: ldr.c  ldr.h
src/drivers/moisture/: moisture.c  moisture.h  moiture.c
src/drivers/pump/: pump.c  pump.h
src/drivers/ultrasonic/: ultrasonic.c  ultrasonic.h
src/network/: wifi_manager.c  wifi_manager.h
src/ui/: ui.h
src/ui/animation/: animation.c  animation.h  easing.h
src/ui/assets/: font.h
src/ui/core/: engine.c  engine.h  engine_private.h  hal.h  renderer.c  renderer.h  ui_types.h
src/ui/elements/: element.c  element.h  icon.c  icon.h  qrcode.c  qrcode.h  shape.c  shape.h  text.c  text.h
